--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Edward Khoze - Solution Architect & Technical Leader</title>
+    <title>Ed Khoze</title>
     <meta name="description" content="Solution Architect with 20+ years in IT. Specializing in Azure, Sitecore CMS, .NET, and cloud solutions. Expert in solution design, team management, and technical leadership." />
     <meta name="author" content="Edward Khoze" />
 
