--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Ed Khoze</title>
     <meta name="description" content="Solution Architect with 20+ years in IT. Specializing in Azure, Sitecore CMS, .NET, and cloud solutions. Expert in solution design, team management, and technical leadership." />
     <meta name="author" content="Edward Khoze" />
+    
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
     <meta property="og:title" content="Edward Khoze - Solution Architect" />
     <meta property="og:description" content="Solution Architect with 20+ years in IT. Specializing in Azure, Sitecore CMS, .NET, and cloud solutions." />
